<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E80D0D"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textViewMainMyTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rectangle_for_main_task"
        android:backgroundTint="@color/testScheme"
        android:drawablePadding="50dp"
        android:includeFontPadding="true"
        android:padding="10sp"
        android:text="@string/my_tasks"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToAddFormButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add_task"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/goToAllTaskButton"
        app:layout_constraintEnd_toStartOf="@+id/goToAllTaskButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/goToAllTaskButton" />

    <Button
        android:id="@+id/goToAllTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF0057"
        android:text="@string/all_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/goToAddFormButton"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainMyTaskTitle" />

    <Button
        android:id="@+id/goToSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3574E1"
        android:text="@string/setting"
        android:textColor="#4300FF"
        app:layout_constraintBottom_toTopOf="@+id/mainBottomBannerAdView"
        app:layout_constraintEnd_toEndOf="@+id/goToAllTaskButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/goToAddFormButton"
        app:layout_constraintTop_toBottomOf="@+id/goToAddFormButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecyclerViewMain"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/goToAllTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainMyTaskTitle"
        app:layout_constraintVertical_bias="0.508" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/mainBottomBannerAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="LARGE_BANNER"
        app:adUnitId="ca-app-pub-8077611097501749/9096112772"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToSettingsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>